--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,12 @@ paginate: 10
 paginate_path: "/:num/"
 gems:
   - jekyll-sitemap
+defaults:
+  -
+    scope:
+      paths: ""
+    values:
+      image: /images/logo.svg
+      author_name: Julien
+      author_uri: http://ouvre-boite.com
+      author_email_md5: b30ce50678f0e934eaa6697425c59dd7
