adding more meta info

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ defaults:
       type: "posts"
     values:
       layout: post
-      image: /images/logo.svg
+      image: /images/superfeedr-logo.png
       author_name: Julien
       author_uri: http://ouvre-boite.com
       author_email_md5: b30ce50678f0e934eaa6697425c59dd7
